@@ -16,7 +16,23 @@ describe Rserve::REXP::Double do
     
     
   end
-    describe "common methods" do
+  describe "NA management" do
+    before do
+      @payload=[3,5,Rserve::REXP::Double::NA, 10,20]
+      @a=Rserve::REXP::Double.new(@payload)
+
+    end
+    
+    it "method na? should return coherent answer" do
+      @a.na?(@a.as_integers[0]).should be_false
+      @a.na?(@a.as_integers[2]).should be_true
+      @a.na?.should==[false,false,true,false,false]
+    end
+    it "to_a should return correct values with NA" do
+      @a.to_a.should==[3,5, nil, 10, 20]
+    end
+  end
+  describe "common methods" do
     before do
       @n=rand(10)+10
       @payload=@n.times.map {rand(10).to_f}
@@ -37,13 +53,8 @@ describe Rserve::REXP::Double do
     it "method as_strings should return strings" do
       @a.as_strings.should==@payload.map(&:to_s)
     end
-    it "method na? should return coherent answer" do
-      payload=[3,5,Rserve::REXP::Double::NA, 10,20]
-      a=Rserve::REXP::Double.new(payload)
-      a.na?(a.as_integers[0]).should be_false
-      a.na?(a.as_integers[2]).should be_true
-      a.na?.should==[false,false,true,false,false]
-    end
+    
+    
     it "method to_debug_string and to_s returns a coherent response" do
       @a.to_debug_string.size.should>0
       @a.to_s.size.should>0
